<?xml version="1.0" encoding="utf-8"?>
<com.kennyc.view.MultiStateView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/msvMovieDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:msv_emptyView="@layout/default_empty_layout"
    app:msv_errorView="@layout/default_error_layout"
    app:msv_loadingView="@layout/default_loading_layout"
    app:msv_viewState="content">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarNewsDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimaryDark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/imgBackdrop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_200dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_44dp"
                        android:background="@drawable/bg_gradient_detail"
                        app:layout_constraintBottom_toTopOf="@id/llMovie" />

                    <LinearLayout
                        android:id="@+id/llMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPetrol"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/dimen_16dp"
                        android:paddingTop="@dimen/dimen_8dp"
                        android:paddingRight="@dimen/dimen_16dp"
                        android:paddingBottom="@dimen/dimen_16dp"
                        app:layout_constraintTop_toBottomOf="@id/imgBackdrop">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvMovieTitle"
                                style="@style/MovieDbTextView.Bold.White"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textSize="@dimen/text_size_18sp"
                                tools:text="Joker" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tvMovieRating"
                                    style="@style/MovieDbTextView.Medium.White"
                                    android:drawableStart="@drawable/ic_star"
                                    android:drawablePadding="@dimen/dimen_8dp"
                                    android:textSize="@dimen/text_size_18sp"
                                    tools:text="8.8/" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/MovieDbTextView.Light.White"
                                    android:text="@string/label_ten"
                                    android:textSize="@dimen/text_size_11sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSubTitle"
                            style="@style/MovieDbTextView.White"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:textSize="@dimen/text_size_10sp"
                            tools:text="29 October 2019 | Crime, Thriller, Drama | English" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarDetail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="@dimen/dimen_25dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_back"
                    app:titleTextAppearance="@style/MovieDbToolbar"
                    app:titleTextColor="@color/colorWhite" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rectangle_white_top_corner"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginBottom="@dimen/dimen_24dp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dimen_16dp"
                    android:paddingRight="@dimen/dimen_16dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mcvPoster"
                        android:layout_width="@dimen/dimen_80dp"
                        android:layout_height="@dimen/dimen_110dp"
                        app:cardCornerRadius="@dimen/dimen_10dp">

                        <ImageView
                            android:id="@+id/imgPoster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            tools:src="@drawable/sample_image" />
                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/MovieDbTextView.Medium.Black"
                            android:text="@string/label_overview" />

                        <TextView
                            android:id="@+id/tvOverview"
                            style="@style/MovieDbTextView.Black"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:textSize="@dimen/text_size_10sp"
                            tools:text="During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure." />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_half_dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@color/colorWarmGrey" />

                <TextView
                    style="@style/MovieDbTextView.Medium.Black"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:text="@string/label_production_company" />

                <com.kennyc.view.MultiStateView
                    android:id="@+id/msvProductionCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:msv_emptyView="@layout/default_empty_layout"
                    app:msv_errorView="@layout/default_error_layout"
                    app:msv_loadingView="@layout/default_loading_layout"
                    app:msv_viewState="content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvProductionCompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:paddingLeft="@dimen/dimen_16dp"
                        android:paddingRight="@dimen/dimen_16dp"
                        tools:targetApi="lollipop" />
                </com.kennyc.view.MultiStateView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_half_dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@color/colorWarmGrey" />

                <TextView
                    style="@style/MovieDbTextView.Medium.Black"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:text="@string/label_trailer" />

                <com.kennyc.view.MultiStateView
                    android:id="@+id/msvYoutubeTrailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:msv_emptyView="@layout/default_empty_layout"
                    app:msv_errorView="@layout/default_error_layout"
                    app:msv_loadingView="@layout/default_loading_layout"
                    app:msv_viewState="content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardYoutubeTrailer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_180dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:layout_marginEnd="@dimen/dimen_16dp"
                        app:cardCornerRadius="@dimen/dimen_8dp"
                        app:cardElevation="0dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground">

                            <ImageView
                                android:id="@+id/imgYoutubeThumbnail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop" />

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:padding="@dimen/dimen_5dp"
                                android:src="@drawable/ic_play_button" />
                        </FrameLayout>
                    </com.google.android.material.card.MaterialCardView>
                </com.kennyc.view.MultiStateView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_half_dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@color/colorWarmGrey" />

                <TextView
                    style="@style/MovieDbTextView.Medium.Black"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:text="@string/label_user_review" />

                <com.kennyc.view.MultiStateView
                    android:id="@+id/msvReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:msv_emptyView="@layout/default_empty_layout"
                    app:msv_errorView="@layout/default_error_layout"
                    app:msv_loadingView="@layout/default_loading_layout"
                    app:msv_viewState="content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:paddingLeft="@dimen/dimen_16dp"
                        android:paddingRight="@dimen/dimen_16dp"
                        tools:targetApi="lollipop" />
                </com.kennyc.view.MultiStateView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</com.kennyc.view.MultiStateView>
